--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: 'Montserrat',sans-serif;
     margin: 0;
     padding: 0;
 }
