--- a/style.css
+++ b/style.css
@@ -6,10 +6,20 @@
 }
 
 body {
-
+    color: #263138
 }
 
 header {
     background-color: #FF9A6C;
-    padding: 10px;
+    display: flex;
+    align-items: center; 
+    justify-content: space-between;
+    padding-left: 80px;
+    padding-right: 80px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
+
+h1{
+    color:#FF9A6C
 }
