--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 header {
-    background-color: #FF9A6C;
+    background-color: #ff9a6c;
     display: flex;
     align-items: center; 
     justify-content: space-between;
@@ -20,6 +20,9 @@ header {
     padding-bottom: 24px;
 }
 
-h1{
-    color:#FF9A6C
+header nav a{
+    color: #fef8f8;
+    font-weight: 600;
+    padding: 32px;
+    text-decoration: none;
 }
