--- a/style.css
+++ b/style.css
@@ -26,3 +26,12 @@ header nav a{
     padding: 32px;
     text-decoration: none;
 }
+
+#inicio{
+    display: flex;
+    align-items: center;
+    gap: 32px;
+    /*cima, direita, baixo, esquerda*/
+    padding: 24px 80px 128px 80px;
+    position: relative;
+}
