--- a/style.css
+++ b/style.css
@@ -20,18 +20,30 @@ header {
     padding-bottom: 24px;
 }
 
-header nav a{
+header nav a {
     color: #fef8f8;
     font-weight: 600;
     padding: 32px;
     text-decoration: none;
 }
 
-#inicio{
+#inicio {
     display: flex;
     align-items: center;
     gap: 32px;
     /*cima, direita, baixo, esquerda*/
     padding: 24px 80px 128px 80px;
     position: relative;
+}
+
+h1,
+h2 {
+    font-weight: 400;
+    font-size: 32px;
+    margin-bottom: 32px;
+}
+
+.paragrafo {
+    line-height: 150%;
+    margin-bottom: 32px;
 }
