--- a/style.css
+++ b/style.css
@@ -47,3 +47,27 @@ h2 {
     line-height: 150%;
     margin-bottom: 32px;
 }
+
+.botao {
+    background-color: #ff725e;
+    border-radius: 8px;
+    color: #ffffff;
+    text-decoration: none;
+    /* vertical, horizontal, no caso do topo sera duplicado para baixo, e no caso da direita, sera duplicado para esquerda*/
+    padding: 16px 32px;
+}
+
+.botao-transparente {
+    background-color: transparent;
+    color: #ff725e;
+    padding: 16px 32px;
+    text-underline-offset: 5px;
+}
+
+.absolute {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    z-index: -10;
+}
