estilizando secao de duvidas

--- a/style.css
+++ b/style.css
@@ -95,4 +95,13 @@ h2 {
 
 #farmacia .paragrafo {
     max-width: 950px;
+    margin: 0 auto;
 }
+
+#duvidas {
+    display: flex;
+    align-items: center;
+    gap: 64px;
+    padding: 64px 80px;
+}
+
