--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ h2 {
 footer {
     background-color: rgba(255, 152, 108, 0.25);
     display: flex;
+    justify-content: space-between;
     gap: 80px;
     padding: 64px 80px;
 }
@@ -148,4 +149,28 @@ footer .titulo {
 footer nav a {
     color: #263138;
     display: block;
+    margin-bottom: 16px;
+    text-decoration: none;
+    
+}
+
+footer p {
+    margin-bottom: 16px;
+    max-width: 350px;
+}
+
+footer p a {
+    color: #ff725e;
+    text-decoration:none;
+}
+
+#copyright {
+    background-color: #263138;
+    padding: 24px;
+    color: #ffffff;
+    text-align: center;
+}
+
+#copyright a {
+    color: #ff9a6c;
 }
